--- a/src/views/sorter/sorterView.scss
+++ b/src/views/sorter/sorterView.scss
@@ -1,16 +1,32 @@
 .sorterViewRoot {
-  display: flex;
-  align-items: flex-end;
-  justify-content: center;
-  margin: 0 auto;
-  height: 1000px;
-  width: 90%;
-  @for $i from 0 through 99 {
-    .element#{$i} {
-      height: $i + 1%;
-      width: 1%;
-      background-color: green;
-      margin: 0 2px;
+  width: 100%;
+
+  .sorterSubMenu {
+    width: 100%;
+    height: 50px;
+    background: #028CCA;
+    padding: 10px;
+    box-sizing: border-box;
+
+    .sortSelectRoot {
+      width: 250px;
+    }
+  }
+
+  .sorterVisualizer {
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+    margin: 0 auto;
+    height: 1000px;
+    width: 90%;
+    @for $i from 0 through 99 {
+      .element#{$i} {
+        height: $i + 1%;
+        width: 1%;
+        background-color: green;
+        margin: 0 2px;
+      }
     }
   }
 }
